<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mi_Log"
        android:icon="@drawable/ic_log"
        android:title="@string/mi_logs_title"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/mi_show_login_logout_logs"
                android:title="@string/mi_show_login_log_out_logs_title"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/mi_User"
        android:icon="@drawable/ic_log"
        android:title="@string/mi_user_title"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/mi_user_profile"
                android:title="@string/mi_show_user_profile_title"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
    android:id="@+id/mi_Logout"
    android:icon="@drawable/ic_logout"
    android:title="@string/mi_logout_title"
    app:showAsAction="never" />
    <item
        android:id="@+id/mi_Exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/mi_exit_title"
        app:showAsAction="never" />


</menu>